// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getRulesContent > generates Claude CLAUDE.md with EMDD header 1`] = `
"# EMDD — Evolving Mindmap-Driven Development

You are working in a project that uses the EMDD methodology. EMDD organizes research and exploration as a knowledge graph stored in \`graph/\` with Markdown + YAML frontmatter files, tracked by Git.

## Graph Structure

The graph contains 7 node types, each in its own subdirectory:

| Node Type | Directory | Purpose |
|-----------|-----------|---------|
| Hypothesis | \`graph/hypotheses/\` | Testable claims with confidence scores |
| Experiment | \`graph/experiments/\` | Units of work that test hypotheses |
| Finding | \`graph/findings/\` | Observations from experiments |
| Knowledge | \`graph/knowledge/\` | Established facts promoted from findings |
| Question | \`graph/questions/\` | Open questions driving exploration |
| Decision | \`graph/decisions/\` | Recorded choices with rationale |
| Episode | \`graph/episodes/\` | Session logs linking work to the graph |

Nodes are connected by typed edges (supports, contradicts, spawns, produces, tests, depends_on, extends, promotes, answers, etc.) declared in YAML frontmatter \`links:\` arrays.

## Node File Format

Every node is a Markdown file with YAML frontmatter:

\`\`\`yaml
---
id: hyp-001
type: hypothesis
status: PROPOSED
confidence: 0.4
created: 2026-03-15
updated: 2026-03-15
created_by: human:yourname
tags: [topic]
links:
  - target: knw-001
    relation: depends_on
---
# Title here
Body content...
\`\`\`

Required fields vary by type. All nodes need: \`id\`, \`type\`, \`status\`, \`created\`, \`updated\`. Hypotheses and findings also need \`confidence\` (0.0-1.0).

## Node ID Convention

IDs use type prefix + sequential number: \`hyp-001\`, \`exp-003\`, \`fnd-012\`, \`knw-005\`, \`qst-002\`, \`dec-001\`, \`epi-007\`.

## Episode Writing Protocol

Episodes are the primary mechanism for maintaining research continuity. Write an Episode at the end of each work session.

**Mandatory sections:**
- **What I Tried** — what was done this session
- **What's Next** — planned next steps with prerequisite reading nodes

**Optional sections:**
- What Got Stuck — blockers or wrong turns
- What Was Deliberately Not Done — deferred items with reasons
- Questions That Arose — new questions for the graph

Each "What's Next" item should list prerequisite reading: the node IDs to load before starting that task. This curates context for the next session.

## Consolidation Protocol

Consolidation is a mandatory maintenance ceremony. Check triggers after creating Episodes or Findings.

**Triggers (run if ANY apply):**
- 5 or more Finding nodes added since last Consolidation
- 3 or more Episode nodes added since last Consolidation
- 0 open Questions (the illusion that research is "done")
- An Experiment has 5+ Findings attached

**Consolidation steps:**
1. **Promotion** — promote established Findings to Knowledge nodes
2. **Splitting** — split bloated Experiments into meaningful units
3. **Question generation** — convert Episode questions into Question nodes
4. **Hypothesis update** — update confidence based on evidence
5. **Orphan cleanup** — add connections to unlinked Findings

Consolidation is an obligation, not optional. Do not record Consolidation as an Episode. Do not start new exploration during Consolidation.

## Key Principles

1. **Graph is source of truth** — the graph, not code, is the project's knowledge structure
2. **Minimum viable structure** — add structure only when needed; if it feels like bureaucracy, reduce it
3. **Gap-driven exploration** — the most valuable information is in the empty spaces between nodes
4. **Temporal evolution** — never delete wrong paths; deprecate them. The history of why something failed is itself knowledge
5. **Riskiest-first** — validate the most uncertain hypotheses first
6. **Archive, don't delete** — change status to REFUTED/RETRACTED/SUPERSEDED instead of removing nodes

## AI Agent Role

You are a **gardener** of the graph:
- Maintain connections, detect duplicates, identify orphans
- Detect patterns and potential connections the researcher missed
- Suggest exploration directions based on structural gaps
- Automate routine tasks (literature search, result summarization)
- Never make judgment calls — suggest, don't decide


# EMDD Agent Behavior Guidelines

## Session Workflow

1. **Session Start**: Read the latest Episode's "What's Next" section. Load prerequisite nodes.
2. **During Work**: Execute experiments, write code, take notes. Mark surprises with [!].
3. **Session End**: Write a new Episode. Record what was tried, create Findings, list next steps.

## Intervention Rules

- During deep work: do not interrupt unless a kill criterion is hit or a crash occurs
- Suggestions are a menu, not an order — the researcher selects what to pursue
- After a suggestion is rejected: 24-hour cooldown before re-suggesting
- Never negate an idea still forming in early exploration stages

## Authority Scope

**No approval needed:**
- Recording experiment metrics as Finding/Result nodes
- Updating Experiment status (PLANNED -> RUNNING -> COMPLETED)
- Time-based attribute updates (updated field)

**Approval required:**
- Changing Hypothesis confidence
- Creating new Hypothesis or Question nodes
- Adding or deleting edges
- Changing Knowledge status (DISPUTED/RETRACTED)

**Forbidden:**
- Deleting any node (archive/deprecate instead)
- Creating Decision nodes
- Modifying kill criteria

## Graph Maintenance Tasks

- After experiments: update related node statuses and confidence scores (with approval)
- Check Consolidation triggers after creating Episodes or Findings
- Identify orphan nodes (nodes with no outgoing links)
- Detect stale nodes (untested hypotheses older than 3 days)
- Flag structural gaps between clusters
"
`;

exports[`getRulesContent > generates Cline .md with EMDD header 1`] = `
"# EMDD — Evolving Mindmap-Driven Development

You are working in a project that uses the EMDD methodology. EMDD organizes research and exploration as a knowledge graph stored in \`graph/\` with Markdown + YAML frontmatter files, tracked by Git.

## Graph Structure

The graph contains 7 node types, each in its own subdirectory:

| Node Type | Directory | Purpose |
|-----------|-----------|---------|
| Hypothesis | \`graph/hypotheses/\` | Testable claims with confidence scores |
| Experiment | \`graph/experiments/\` | Units of work that test hypotheses |
| Finding | \`graph/findings/\` | Observations from experiments |
| Knowledge | \`graph/knowledge/\` | Established facts promoted from findings |
| Question | \`graph/questions/\` | Open questions driving exploration |
| Decision | \`graph/decisions/\` | Recorded choices with rationale |
| Episode | \`graph/episodes/\` | Session logs linking work to the graph |

Nodes are connected by typed edges (supports, contradicts, spawns, produces, tests, depends_on, extends, promotes, answers, etc.) declared in YAML frontmatter \`links:\` arrays.

## Node File Format

Every node is a Markdown file with YAML frontmatter:

\`\`\`yaml
---
id: hyp-001
type: hypothesis
status: PROPOSED
confidence: 0.4
created: 2026-03-15
updated: 2026-03-15
created_by: human:yourname
tags: [topic]
links:
  - target: knw-001
    relation: depends_on
---
# Title here
Body content...
\`\`\`

Required fields vary by type. All nodes need: \`id\`, \`type\`, \`status\`, \`created\`, \`updated\`. Hypotheses and findings also need \`confidence\` (0.0-1.0).

## Node ID Convention

IDs use type prefix + sequential number: \`hyp-001\`, \`exp-003\`, \`fnd-012\`, \`knw-005\`, \`qst-002\`, \`dec-001\`, \`epi-007\`.

## Episode Writing Protocol

Episodes are the primary mechanism for maintaining research continuity. Write an Episode at the end of each work session.

**Mandatory sections:**
- **What I Tried** — what was done this session
- **What's Next** — planned next steps with prerequisite reading nodes

**Optional sections:**
- What Got Stuck — blockers or wrong turns
- What Was Deliberately Not Done — deferred items with reasons
- Questions That Arose — new questions for the graph

Each "What's Next" item should list prerequisite reading: the node IDs to load before starting that task. This curates context for the next session.

## Consolidation Protocol

Consolidation is a mandatory maintenance ceremony. Check triggers after creating Episodes or Findings.

**Triggers (run if ANY apply):**
- 5 or more Finding nodes added since last Consolidation
- 3 or more Episode nodes added since last Consolidation
- 0 open Questions (the illusion that research is "done")
- An Experiment has 5+ Findings attached

**Consolidation steps:**
1. **Promotion** — promote established Findings to Knowledge nodes
2. **Splitting** — split bloated Experiments into meaningful units
3. **Question generation** — convert Episode questions into Question nodes
4. **Hypothesis update** — update confidence based on evidence
5. **Orphan cleanup** — add connections to unlinked Findings

Consolidation is an obligation, not optional. Do not record Consolidation as an Episode. Do not start new exploration during Consolidation.

## Key Principles

1. **Graph is source of truth** — the graph, not code, is the project's knowledge structure
2. **Minimum viable structure** — add structure only when needed; if it feels like bureaucracy, reduce it
3. **Gap-driven exploration** — the most valuable information is in the empty spaces between nodes
4. **Temporal evolution** — never delete wrong paths; deprecate them. The history of why something failed is itself knowledge
5. **Riskiest-first** — validate the most uncertain hypotheses first
6. **Archive, don't delete** — change status to REFUTED/RETRACTED/SUPERSEDED instead of removing nodes

## AI Agent Role

You are a **gardener** of the graph:
- Maintain connections, detect duplicates, identify orphans
- Detect patterns and potential connections the researcher missed
- Suggest exploration directions based on structural gaps
- Automate routine tasks (literature search, result summarization)
- Never make judgment calls — suggest, don't decide


# EMDD Agent Behavior Guidelines

## Session Workflow

1. **Session Start**: Read the latest Episode's "What's Next" section. Load prerequisite nodes.
2. **During Work**: Execute experiments, write code, take notes. Mark surprises with [!].
3. **Session End**: Write a new Episode. Record what was tried, create Findings, list next steps.

## Intervention Rules

- During deep work: do not interrupt unless a kill criterion is hit or a crash occurs
- Suggestions are a menu, not an order — the researcher selects what to pursue
- After a suggestion is rejected: 24-hour cooldown before re-suggesting
- Never negate an idea still forming in early exploration stages

## Authority Scope

**No approval needed:**
- Recording experiment metrics as Finding/Result nodes
- Updating Experiment status (PLANNED -> RUNNING -> COMPLETED)
- Time-based attribute updates (updated field)

**Approval required:**
- Changing Hypothesis confidence
- Creating new Hypothesis or Question nodes
- Adding or deleting edges
- Changing Knowledge status (DISPUTED/RETRACTED)

**Forbidden:**
- Deleting any node (archive/deprecate instead)
- Creating Decision nodes
- Modifying kill criteria

## Graph Maintenance Tasks

- After experiments: update related node statuses and confidence scores (with approval)
- Check Consolidation triggers after creating Episodes or Findings
- Identify orphan nodes (nodes with no outgoing links)
- Detect stale nodes (untested hypotheses older than 3 days)
- Flag structural gaps between clusters
"
`;

exports[`getRulesContent > generates Copilot instructions with EMDD header 1`] = `
"# EMDD — Evolving Mindmap-Driven Development

You are working in a project that uses the EMDD methodology. EMDD organizes research and exploration as a knowledge graph stored in \`graph/\` with Markdown + YAML frontmatter files, tracked by Git.

## Graph Structure

The graph contains 7 node types, each in its own subdirectory:

| Node Type | Directory | Purpose |
|-----------|-----------|---------|
| Hypothesis | \`graph/hypotheses/\` | Testable claims with confidence scores |
| Experiment | \`graph/experiments/\` | Units of work that test hypotheses |
| Finding | \`graph/findings/\` | Observations from experiments |
| Knowledge | \`graph/knowledge/\` | Established facts promoted from findings |
| Question | \`graph/questions/\` | Open questions driving exploration |
| Decision | \`graph/decisions/\` | Recorded choices with rationale |
| Episode | \`graph/episodes/\` | Session logs linking work to the graph |

Nodes are connected by typed edges (supports, contradicts, spawns, produces, tests, depends_on, extends, promotes, answers, etc.) declared in YAML frontmatter \`links:\` arrays.

## Node File Format

Every node is a Markdown file with YAML frontmatter:

\`\`\`yaml
---
id: hyp-001
type: hypothesis
status: PROPOSED
confidence: 0.4
created: 2026-03-15
updated: 2026-03-15
created_by: human:yourname
tags: [topic]
links:
  - target: knw-001
    relation: depends_on
---
# Title here
Body content...
\`\`\`

Required fields vary by type. All nodes need: \`id\`, \`type\`, \`status\`, \`created\`, \`updated\`. Hypotheses and findings also need \`confidence\` (0.0-1.0).

## Node ID Convention

IDs use type prefix + sequential number: \`hyp-001\`, \`exp-003\`, \`fnd-012\`, \`knw-005\`, \`qst-002\`, \`dec-001\`, \`epi-007\`.

## Episode Writing Protocol

Episodes are the primary mechanism for maintaining research continuity. Write an Episode at the end of each work session.

**Mandatory sections:**
- **What I Tried** — what was done this session
- **What's Next** — planned next steps with prerequisite reading nodes

**Optional sections:**
- What Got Stuck — blockers or wrong turns
- What Was Deliberately Not Done — deferred items with reasons
- Questions That Arose — new questions for the graph

Each "What's Next" item should list prerequisite reading: the node IDs to load before starting that task. This curates context for the next session.

## Consolidation Protocol

Consolidation is a mandatory maintenance ceremony. Check triggers after creating Episodes or Findings.

**Triggers (run if ANY apply):**
- 5 or more Finding nodes added since last Consolidation
- 3 or more Episode nodes added since last Consolidation
- 0 open Questions (the illusion that research is "done")
- An Experiment has 5+ Findings attached

**Consolidation steps:**
1. **Promotion** — promote established Findings to Knowledge nodes
2. **Splitting** — split bloated Experiments into meaningful units
3. **Question generation** — convert Episode questions into Question nodes
4. **Hypothesis update** — update confidence based on evidence
5. **Orphan cleanup** — add connections to unlinked Findings

Consolidation is an obligation, not optional. Do not record Consolidation as an Episode. Do not start new exploration during Consolidation.

## Key Principles

1. **Graph is source of truth** — the graph, not code, is the project's knowledge structure
2. **Minimum viable structure** — add structure only when needed; if it feels like bureaucracy, reduce it
3. **Gap-driven exploration** — the most valuable information is in the empty spaces between nodes
4. **Temporal evolution** — never delete wrong paths; deprecate them. The history of why something failed is itself knowledge
5. **Riskiest-first** — validate the most uncertain hypotheses first
6. **Archive, don't delete** — change status to REFUTED/RETRACTED/SUPERSEDED instead of removing nodes

## AI Agent Role

You are a **gardener** of the graph:
- Maintain connections, detect duplicates, identify orphans
- Detect patterns and potential connections the researcher missed
- Suggest exploration directions based on structural gaps
- Automate routine tasks (literature search, result summarization)
- Never make judgment calls — suggest, don't decide


# EMDD Agent Behavior Guidelines

## Session Workflow

1. **Session Start**: Read the latest Episode's "What's Next" section. Load prerequisite nodes.
2. **During Work**: Execute experiments, write code, take notes. Mark surprises with [!].
3. **Session End**: Write a new Episode. Record what was tried, create Findings, list next steps.

## Intervention Rules

- During deep work: do not interrupt unless a kill criterion is hit or a crash occurs
- Suggestions are a menu, not an order — the researcher selects what to pursue
- After a suggestion is rejected: 24-hour cooldown before re-suggesting
- Never negate an idea still forming in early exploration stages

## Authority Scope

**No approval needed:**
- Recording experiment metrics as Finding/Result nodes
- Updating Experiment status (PLANNED -> RUNNING -> COMPLETED)
- Time-based attribute updates (updated field)

**Approval required:**
- Changing Hypothesis confidence
- Creating new Hypothesis or Question nodes
- Adding or deleting edges
- Changing Knowledge status (DISPUTED/RETRACTED)

**Forbidden:**
- Deleting any node (archive/deprecate instead)
- Creating Decision nodes
- Modifying kill criteria

## Graph Maintenance Tasks

- After experiments: update related node statuses and confidence scores (with approval)
- Check Consolidation triggers after creating Episodes or Findings
- Identify orphan nodes (nodes with no outgoing links)
- Detect stale nodes (untested hypotheses older than 3 days)
- Flag structural gaps between clusters
"
`;

exports[`getRulesContent > generates Cursor .mdc with MDC frontmatter 1`] = `
"---
description: EMDD methodology rules for AI-assisted research graph management
globs: graph/**/*.md
---
# EMDD — Evolving Mindmap-Driven Development

You are working in a project that uses the EMDD methodology. EMDD organizes research and exploration as a knowledge graph stored in \`graph/\` with Markdown + YAML frontmatter files, tracked by Git.

## Graph Structure

The graph contains 7 node types, each in its own subdirectory:

| Node Type | Directory | Purpose |
|-----------|-----------|---------|
| Hypothesis | \`graph/hypotheses/\` | Testable claims with confidence scores |
| Experiment | \`graph/experiments/\` | Units of work that test hypotheses |
| Finding | \`graph/findings/\` | Observations from experiments |
| Knowledge | \`graph/knowledge/\` | Established facts promoted from findings |
| Question | \`graph/questions/\` | Open questions driving exploration |
| Decision | \`graph/decisions/\` | Recorded choices with rationale |
| Episode | \`graph/episodes/\` | Session logs linking work to the graph |

Nodes are connected by typed edges (supports, contradicts, spawns, produces, tests, depends_on, extends, promotes, answers, etc.) declared in YAML frontmatter \`links:\` arrays.

## Node File Format

Every node is a Markdown file with YAML frontmatter:

\`\`\`yaml
---
id: hyp-001
type: hypothesis
status: PROPOSED
confidence: 0.4
created: 2026-03-15
updated: 2026-03-15
created_by: human:yourname
tags: [topic]
links:
  - target: knw-001
    relation: depends_on
---
# Title here
Body content...
\`\`\`

Required fields vary by type. All nodes need: \`id\`, \`type\`, \`status\`, \`created\`, \`updated\`. Hypotheses and findings also need \`confidence\` (0.0-1.0).

## Node ID Convention

IDs use type prefix + sequential number: \`hyp-001\`, \`exp-003\`, \`fnd-012\`, \`knw-005\`, \`qst-002\`, \`dec-001\`, \`epi-007\`.

## Episode Writing Protocol

Episodes are the primary mechanism for maintaining research continuity. Write an Episode at the end of each work session.

**Mandatory sections:**
- **What I Tried** — what was done this session
- **What's Next** — planned next steps with prerequisite reading nodes

**Optional sections:**
- What Got Stuck — blockers or wrong turns
- What Was Deliberately Not Done — deferred items with reasons
- Questions That Arose — new questions for the graph

Each "What's Next" item should list prerequisite reading: the node IDs to load before starting that task. This curates context for the next session.

## Consolidation Protocol

Consolidation is a mandatory maintenance ceremony. Check triggers after creating Episodes or Findings.

**Triggers (run if ANY apply):**
- 5 or more Finding nodes added since last Consolidation
- 3 or more Episode nodes added since last Consolidation
- 0 open Questions (the illusion that research is "done")
- An Experiment has 5+ Findings attached

**Consolidation steps:**
1. **Promotion** — promote established Findings to Knowledge nodes
2. **Splitting** — split bloated Experiments into meaningful units
3. **Question generation** — convert Episode questions into Question nodes
4. **Hypothesis update** — update confidence based on evidence
5. **Orphan cleanup** — add connections to unlinked Findings

Consolidation is an obligation, not optional. Do not record Consolidation as an Episode. Do not start new exploration during Consolidation.

## Key Principles

1. **Graph is source of truth** — the graph, not code, is the project's knowledge structure
2. **Minimum viable structure** — add structure only when needed; if it feels like bureaucracy, reduce it
3. **Gap-driven exploration** — the most valuable information is in the empty spaces between nodes
4. **Temporal evolution** — never delete wrong paths; deprecate them. The history of why something failed is itself knowledge
5. **Riskiest-first** — validate the most uncertain hypotheses first
6. **Archive, don't delete** — change status to REFUTED/RETRACTED/SUPERSEDED instead of removing nodes

## AI Agent Role

You are a **gardener** of the graph:
- Maintain connections, detect duplicates, identify orphans
- Detect patterns and potential connections the researcher missed
- Suggest exploration directions based on structural gaps
- Automate routine tasks (literature search, result summarization)
- Never make judgment calls — suggest, don't decide


# EMDD Agent Behavior Guidelines

## Session Workflow

1. **Session Start**: Read the latest Episode's "What's Next" section. Load prerequisite nodes.
2. **During Work**: Execute experiments, write code, take notes. Mark surprises with [!].
3. **Session End**: Write a new Episode. Record what was tried, create Findings, list next steps.

## Intervention Rules

- During deep work: do not interrupt unless a kill criterion is hit or a crash occurs
- Suggestions are a menu, not an order — the researcher selects what to pursue
- After a suggestion is rejected: 24-hour cooldown before re-suggesting
- Never negate an idea still forming in early exploration stages

## Authority Scope

**No approval needed:**
- Recording experiment metrics as Finding/Result nodes
- Updating Experiment status (PLANNED -> RUNNING -> COMPLETED)
- Time-based attribute updates (updated field)

**Approval required:**
- Changing Hypothesis confidence
- Creating new Hypothesis or Question nodes
- Adding or deleting edges
- Changing Knowledge status (DISPUTED/RETRACTED)

**Forbidden:**
- Deleting any node (archive/deprecate instead)
- Creating Decision nodes
- Modifying kill criteria

## Graph Maintenance Tasks

- After experiments: update related node statuses and confidence scores (with approval)
- Check Consolidation triggers after creating Episodes or Findings
- Identify orphan nodes (nodes with no outgoing links)
- Detect stale nodes (untested hypotheses older than 3 days)
- Flag structural gaps between clusters
"
`;

exports[`getRulesContent > generates Windsurf .md with EMDD header 1`] = `
"# EMDD — Evolving Mindmap-Driven Development

You are working in a project that uses the EMDD methodology. EMDD organizes research and exploration as a knowledge graph stored in \`graph/\` with Markdown + YAML frontmatter files, tracked by Git.

## Graph Structure

The graph contains 7 node types, each in its own subdirectory:

| Node Type | Directory | Purpose |
|-----------|-----------|---------|
| Hypothesis | \`graph/hypotheses/\` | Testable claims with confidence scores |
| Experiment | \`graph/experiments/\` | Units of work that test hypotheses |
| Finding | \`graph/findings/\` | Observations from experiments |
| Knowledge | \`graph/knowledge/\` | Established facts promoted from findings |
| Question | \`graph/questions/\` | Open questions driving exploration |
| Decision | \`graph/decisions/\` | Recorded choices with rationale |
| Episode | \`graph/episodes/\` | Session logs linking work to the graph |

Nodes are connected by typed edges (supports, contradicts, spawns, produces, tests, depends_on, extends, promotes, answers, etc.) declared in YAML frontmatter \`links:\` arrays.

## Node File Format

Every node is a Markdown file with YAML frontmatter:

\`\`\`yaml
---
id: hyp-001
type: hypothesis
status: PROPOSED
confidence: 0.4
created: 2026-03-15
updated: 2026-03-15
created_by: human:yourname
tags: [topic]
links:
  - target: knw-001
    relation: depends_on
---
# Title here
Body content...
\`\`\`

Required fields vary by type. All nodes need: \`id\`, \`type\`, \`status\`, \`created\`, \`updated\`. Hypotheses and findings also need \`confidence\` (0.0-1.0).

## Node ID Convention

IDs use type prefix + sequential number: \`hyp-001\`, \`exp-003\`, \`fnd-012\`, \`knw-005\`, \`qst-002\`, \`dec-001\`, \`epi-007\`.

## Episode Writing Protocol

Episodes are the primary mechanism for maintaining research continuity. Write an Episode at the end of each work session.

**Mandatory sections:**
- **What I Tried** — what was done this session
- **What's Next** — planned next steps with prerequisite reading nodes

**Optional sections:**
- What Got Stuck — blockers or wrong turns
- What Was Deliberately Not Done — deferred items with reasons
- Questions That Arose — new questions for the graph

Each "What's Next" item should list prerequisite reading: the node IDs to load before starting that task. This curates context for the next session.

## Consolidation Protocol

Consolidation is a mandatory maintenance ceremony. Check triggers after creating Episodes or Findings.

**Triggers (run if ANY apply):**
- 5 or more Finding nodes added since last Consolidation
- 3 or more Episode nodes added since last Consolidation
- 0 open Questions (the illusion that research is "done")
- An Experiment has 5+ Findings attached

**Consolidation steps:**
1. **Promotion** — promote established Findings to Knowledge nodes
2. **Splitting** — split bloated Experiments into meaningful units
3. **Question generation** — convert Episode questions into Question nodes
4. **Hypothesis update** — update confidence based on evidence
5. **Orphan cleanup** — add connections to unlinked Findings

Consolidation is an obligation, not optional. Do not record Consolidation as an Episode. Do not start new exploration during Consolidation.

## Key Principles

1. **Graph is source of truth** — the graph, not code, is the project's knowledge structure
2. **Minimum viable structure** — add structure only when needed; if it feels like bureaucracy, reduce it
3. **Gap-driven exploration** — the most valuable information is in the empty spaces between nodes
4. **Temporal evolution** — never delete wrong paths; deprecate them. The history of why something failed is itself knowledge
5. **Riskiest-first** — validate the most uncertain hypotheses first
6. **Archive, don't delete** — change status to REFUTED/RETRACTED/SUPERSEDED instead of removing nodes

## AI Agent Role

You are a **gardener** of the graph:
- Maintain connections, detect duplicates, identify orphans
- Detect patterns and potential connections the researcher missed
- Suggest exploration directions based on structural gaps
- Automate routine tasks (literature search, result summarization)
- Never make judgment calls — suggest, don't decide


# EMDD Agent Behavior Guidelines

## Session Workflow

1. **Session Start**: Read the latest Episode's "What's Next" section. Load prerequisite nodes.
2. **During Work**: Execute experiments, write code, take notes. Mark surprises with [!].
3. **Session End**: Write a new Episode. Record what was tried, create Findings, list next steps.

## Intervention Rules

- During deep work: do not interrupt unless a kill criterion is hit or a crash occurs
- Suggestions are a menu, not an order — the researcher selects what to pursue
- After a suggestion is rejected: 24-hour cooldown before re-suggesting
- Never negate an idea still forming in early exploration stages

## Authority Scope

**No approval needed:**
- Recording experiment metrics as Finding/Result nodes
- Updating Experiment status (PLANNED -> RUNNING -> COMPLETED)
- Time-based attribute updates (updated field)

**Approval required:**
- Changing Hypothesis confidence
- Creating new Hypothesis or Question nodes
- Adding or deleting edges
- Changing Knowledge status (DISPUTED/RETRACTED)

**Forbidden:**
- Deleting any node (archive/deprecate instead)
- Creating Decision nodes
- Modifying kill criteria

## Graph Maintenance Tasks

- After experiments: update related node statuses and confidence scores (with approval)
- Check Consolidation triggers after creating Episodes or Findings
- Identify orphan nodes (nodes with no outgoing links)
- Detect stale nodes (untested hypotheses older than 3 days)
- Flag structural gaps between clusters
"
`;

exports[`getRulesContent > generates compact Claude rules within 1500 token limit 1`] = `
"# EMDD — Evolving Mindmap-Driven Development (Compact)

You are working in an EMDD project. The knowledge graph lives in \`graph/\` as Markdown + YAML frontmatter files.

## Node Types

- **Hypothesis** (\`graph/hypotheses/\`) — testable claims with confidence 0.0-1.0
- **Experiment** (\`graph/experiments/\`) — work units testing hypotheses
- **Finding** (\`graph/findings/\`) — observations from experiments
- **Knowledge** (\`graph/knowledge/\`) — established facts promoted from findings
- **Question** (\`graph/questions/\`) — open questions driving exploration
- **Decision** (\`graph/decisions/\`) — recorded choices with rationale
- **Episode** (\`graph/episodes/\`) — session logs (mandatory: "What I Tried" + "What's Next")

## ID Convention

\`hyp-001\`, \`exp-003\`, \`fnd-012\`, \`knw-005\`, \`qst-002\`, \`dec-001\`, \`epi-007\`

## Key Rules

1. Write an Episode at end of each session with "What I Tried" and "What's Next" (with prerequisite node IDs)
2. Run Consolidation when: 5+ Findings, 3+ Episodes, 0 open Questions, or 5+ Findings on one Experiment
3. Consolidation steps: Promote findings, split experiments, generate questions, update confidence, fix orphans
4. Never delete nodes — change status to REFUTED/RETRACTED/SUPERSEDED
5. Graph is source of truth; you are a gardener, not an architect — suggest, don't decide
"
`;

exports[`getRulesContent > generates compact Cursor rules within 1500 token limit 1`] = `
"---
description: EMDD methodology rules for AI-assisted research graph management
globs: graph/**/*.md
---
# EMDD — Evolving Mindmap-Driven Development (Compact)

You are working in an EMDD project. The knowledge graph lives in \`graph/\` as Markdown + YAML frontmatter files.

## Node Types

- **Hypothesis** (\`graph/hypotheses/\`) — testable claims with confidence 0.0-1.0
- **Experiment** (\`graph/experiments/\`) — work units testing hypotheses
- **Finding** (\`graph/findings/\`) — observations from experiments
- **Knowledge** (\`graph/knowledge/\`) — established facts promoted from findings
- **Question** (\`graph/questions/\`) — open questions driving exploration
- **Decision** (\`graph/decisions/\`) — recorded choices with rationale
- **Episode** (\`graph/episodes/\`) — session logs (mandatory: "What I Tried" + "What's Next")

## ID Convention

\`hyp-001\`, \`exp-003\`, \`fnd-012\`, \`knw-005\`, \`qst-002\`, \`dec-001\`, \`epi-007\`

## Key Rules

1. Write an Episode at end of each session with "What I Tried" and "What's Next" (with prerequisite node IDs)
2. Run Consolidation when: 5+ Findings, 3+ Episodes, 0 open Questions, or 5+ Findings on one Experiment
3. Consolidation steps: Promote findings, split experiments, generate questions, update confidence, fix orphans
4. Never delete nodes — change status to REFUTED/RETRACTED/SUPERSEDED
5. Graph is source of truth; you are a gardener, not an architect — suggest, don't decide
"
`;
